--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <nav class="px-4 py-3">
         <div class="max-w-4xl mx-auto flex justify-between items-center">
             <div class="flex items-center gap-2 font-bold text-xl" style="color: var(--primary-700)">
-                <i data-lucide="sparkles"></i> 2024 Planner
+                <i data-lucide="sparkles"></i> New Year Planner
             </div>
             <button onclick="resetToMain()" class="nav-btn">
                 <i data-lucide="home"></i> Main
@@ -309,4 +309,5 @@
         init();
     </script>
 </body>
+
 </html>
